crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_plugin_manager_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                             ┌ Plugin Manager (Ctrl+P to close) ────────────────────────┐                             │"
"│                             │  No plugins found in ~/.prb/plugins/                     │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"╰─────────────────────────────│                                                          │─────────────────────────────╯"
"┌ Decode ─────────────────────│                                                          │─────────────────────────────┐"
"│  Timestamp: 00:00:01.000    │                                                          │                   Hello gRPC│"
"│  Direction: inbound         │                                                          │                             │"
"│▶ Source                     │                                                          │                             │"
"│  Transport: gRPC            │                                                          │                             │"
"│▶ Payload (10 bytes)         │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │                                                          │                             │"
"│                             │──────────────────────────────────────────────────────────│                             │"
"│                             └─ j/k: nav  Space: toggle  i: info/install  r: reload  c:─┘                             │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                     │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
