crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_session_info_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│    2 00:00:02.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                        ┌ Session Info ──────────────────────────────────────────────────────┐                        │"
"│                        │                                                                    │                        │"
"│                        │File: <loaded data>                                                 │                        │"
"│                        │Size: 0 bytes                                                       │                        │"
"│                        │Events: 2                                                           │                        │"
"│                        │Duration: 1.000s                                                    │                        │"
"│                        │Captured: 1970 00:00:01 UTC                                         │                        │"
"│                        │                                                                    │                        │"
"╰────────────────────────│Press ESC or 'i' to close                                           │────────────────────────╯"
"┌ Decode ────────────────│                                                                    │────────────────────────┐"
"│  Timestamp: 00:00:01.00│                                                                    │              Hello gRPC│"
"│  Direction: inbound    │                                                                    │                        │"
"│▶ Source                │                                                                    │                        │"
"│  Transport: gRPC       │                                                                    │                        │"
"│▶ Payload (10 bytes)    │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        └────────────────────────────────────────────────────────────────────┘                        │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                    █│"
"│ 00:00:01.000 --- 00:00:02.000  gRPC: 2                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 2 events │ gRPC: 2                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
