crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_small_terminal_60x15.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                         "
"╭ Events [*] ──────────────────────────────────────────────╮"
"│#     Time^           Source            Destination       │"
"│    1 00:00:01.000    10.0.0.1:1234     10.0.0.2:5678     │"
"│    2 00:00:02.000    10.0.0.2:5678     10.0.0.3:9999     │"
"│                                                          │"
"╰──────────────────────────────────────────────────────────╯"
"┌ Decode ──────────────┐┌ Hex Dump ────────────────────────┐"
"│  Timestamp: 00:00:01.││00000000  48 65 6c 6c 6f 20 67 52 │"
"│  Direction: inbound  ││                                  │"
"└──────────────────────┘└──────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" 2 events │ gRPC: 1 ZMQ: 1  Tab:pane  j/k:nav  s:sort  /:fil"
