crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_two_events_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^        Source             Destination        Protocol   Dir Summary                                       │"
"│    1 00:00:01.000 10.0.0.1:1234      10.0.0.2:5678      gRPC       ←                                                 │"
"│    2 00:00:02.000 10.0.0.2:5678      10.0.0.3:9999      ZMQ        →                                                 │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"┌ Decode ──────────────────────────────────────┐┌ Hex Dump ────────────────────────────────────────────────────────────┐"
"│  Timestamp: 00:00:01.000                     ││00000000  48 65 6c 6c 6f 20 67 52  50 43                    Hello gRPC│"
"│  Direction: inbound                          ││                                                                      │"
"│▶ Source                                      ││                                                                      │"
"│  Transport: gRPC                             ││                                                                      │"
"│▶ Payload (10 bytes)                          ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│ZMQ                                                                                                                  █│"
"│ 00:00:01.000 --- 00:00:02.000  gRPC: 1  ZMQ: 1                                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 2 events │ gRPC: 1 ZMQ: 1                                          Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
