crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_unicode_data_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"┌ Decode ──────────────────────────────────────┐┌ Hex Dump ────────────────────────────────────────────────────────────┐"
"│  Timestamp: 00:00:01.000                     ││00000000  48 65 6c 6c 6f 20 e4 b8  96 e7 95 8c 20 f0 9f 8c  Hello ....│"
"│  Direction: inbound                          ││00000010  8d 20 d0 9f d1 80 d0 b8  d0 b2 d0 b5 d1 82 20 d9  . ........│"
"│▶ Source                                      ││00000020  85 d8 b1 d8 ad d8 a8 d8  a7                       ......... │"
"│  Transport: gRPC                             ││                                                                      │"
"│▶ Payload (41 bytes)                          ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                     │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
